// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable editing and pass a warning to variablePreview if variable does not exist 1`] = `
<ul
  className="FilterList"
>
  <li
    className="listItem notEditable"
    key="0"
  >
    <ActionItem
      onClick={[Function]}
      warning="Variable does not exist"
    >
      <VariablePreview
        filter={
          Object {
            "operator": "in",
            "values": Array [
              "varValue",
            ],
          }
        }
        variableName="notANameButAnId"
      />
    </ActionItem>
  </li>
</ul>
`;

exports[`should display a flow node duration filter 1`] = `
<ul
  className="FilterList"
>
  <li
    className="listItem"
    key="0"
  >
    <ActionItem
      onClick={[Function]}
    >
      <span
        className="parameterName"
      >
        Duration
      </span>
      <span>
         
        filter is applied to
         
      </span>
      <Tooltip
        content={
          <div
            className="filterValues"
          >
            <div>
              <div
                className="flowNode"
              >
                <PreviewItemValue>
                  flow node name
                </PreviewItemValue>
                <span>
                   
                  is less than
                   
                </span>
                <PreviewItemValue>
                  18
                   
                  hours
                </PreviewItemValue>
              </div>
            </div>
          </div>
        }
        position="bottom"
      >
        <span
          className="PreviewItemValue"
        >
          1
           
          Flow Node
        </span>
      </Tooltip>
    </ActionItem>
  </li>
</ul>
`;

exports[`should display date preview if the filter is a date filter 1`] = `
<ul
  className="FilterList"
>
  <li
    className="listItem"
    key="0"
  >
    <ActionItem
      onClick={[Function]}
    >
      <DateFilterPreview
        filter={
          Object {
            "end": "2017-11-26T23:59:59",
            "start": "2017-11-16T00:00:00",
            "type": "fixed",
          }
        }
        filterType="startDate"
      />
    </ActionItem>
  </li>
</ul>
`;
